guacamole/01-guacamole-ns.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "guacamole"
  labels:
    name: "guacamole"
