guacamole/02-guacamole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-svc
  namespace: guacamole
  labels:
    run: guacamole
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: guacamole
