guacamole/03-guacamole-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: YOUR_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: guacamole-svc
          servicePort: 8080
